--- a/html/home.html
+++ b/html/home.html
@@ -85,6 +85,30 @@
         </div>
     </div>
     
+    <div id="upload-status">
+        <p class="us-t">Uploading Media...</p>
+        <p class="us-details">
+            Uploaded
+            <span class="us-up">0</span>
+            -
+            Failed
+            <span class="us-fail">0</span>
+        </p>
+
+        <img src="/logo.png" alt="Preview" id="up-preview" draggable="false">
+        <span id="us-info">
+            <span id="us-namesize">
+                logo.png - 210 KiB
+            </span>
+            <br>
+            <span id="ui-chunks">0/0 chunks</span>
+            <br>
+            <span id="ui-percent">0%</span>
+            <br>
+            <span id="ui-sr">0 Bytes Remaining</span>
+        </span>
+    </div>
+
     <script src="/upload.js"></script>
     <script src="/home.js"></script>
 </body>
