--- a/html/home.html
+++ b/html/home.html
@@ -107,6 +107,8 @@
             <br>
             <span id="ui-sr">0 Bytes Remaining</span>
         </span>
+
+        <span class="us-close">X</span>
     </div>
 
     <script src="/upload.js"></script>
