--- a/html/home.html
+++ b/html/home.html
@@ -111,6 +111,8 @@
         <span class="us-close">X</span>
     </div>
 
+    <input type="file" id="file-input" style="display: none;" multiple accept="image/*,video/*">
+
     <script src="/upload.js"></script>
     <script src="/home.js"></script>
 </body>
