progress bar and hiding

--- a/html/home.html
+++ b/html/home.html
@@ -50,7 +50,7 @@
             <span>All People</span>
         </div>
     </div>
-    <div id="user-pop">
+    <div id="user-pop" style="display: none;">
         <div id="up-avatar">E</div>
         <span id="up-name">Elijah Bantugan</span>
         <span id="up-uname">ebantugan</span>
@@ -109,6 +109,10 @@
         </span>
 
         <span class="us-close">X</span>
+
+        <div id="bottom-progress">
+            <div id="bp-fi"></div>
+        </div>
     </div>
 
     <input type="file" id="file-input" style="display: none;" multiple accept="image/*,video/*">
