--- a/html/home.html
+++ b/html/home.html
@@ -115,6 +115,8 @@
         </div>
     </div>
 
+    <div id="photos-container"></div>
+
     <input type="file" id="file-input" style="display: none;" multiple accept="image/*,video/*">
 
     <script src="/upload.js"></script>
