toggle, max width, etc

--- a/html/home.html
+++ b/html/home.html
@@ -139,7 +139,7 @@
             </div>
             <img src="/photos/IMG_8216.jpeg" id="pv-img" alt="Phoco Image Viewer">
         </div>
-        <div id="pv-info">
+        <div id="pv-info" style="right: -300px">
             <h1>Info</h1>
             <input type="text" placeholder="Add a description" id="pvi-desc">
         </div>
