--- a/html/home.html
+++ b/html/home.html
@@ -140,9 +140,48 @@
             </div>
             <img id="pv-img" alt="Phoco Image Viewer">
         </div>
-        <div id="pv-info" style="right: -300px">
+        <div id="pv-info" style="right: -350px">
             <h1>Info</h1>
             <input type="text" placeholder="Add a description" id="pvi-desc">
+            <p class="pvi-sub">Details</p>
+            <div class="pvi-detail">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M128 0c17.7 0 32 14.3 32 32V64H288V32c0-17.7 14.3-32 32-32s32 14.3 32 32V64h48c26.5 0 48 21.5 48 48v48H0V112C0 85.5 21.5 64 48 64H96V32c0-17.7 14.3-32 32-32zM0 192H448V464c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V192zm80 64c-8.8 0-16 7.2-16 16v96c0 8.8 7.2 16 16 16h96c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H80z"/></svg>
+                <span class="pvid-t">May 31</span>
+                <p class="pvid-details">Yesterday, 1:10PM GMT-07:00</p>
+            </div>
+            <div class="pvi-detail">
+                <svg fill="#000000" height="800px" width="800px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+	 viewBox="0 0 303.155 303.155" xml:space="preserve"><g><path d="M151.578,0C67.998,0,0.001,67.998,0.001,151.579c0,83.579,67.997,151.576,151.577,151.576
+		c83.579,0,151.576-67.997,151.576-151.576C303.154,67.998,235.157,0,151.578,0z M90.191,191.032
+		c0.532,0.917,0.534,2.049,0.005,2.968c-0.529,0.919-1.509,1.485-2.569,1.485H39.594c-4.122,0-7.769-2.686-8.986-6.624
+		c-3.643-11.791-5.607-24.311-5.607-37.282c0-16.766,3.282-32.778,9.229-47.435c0.426-1.049,1.411-1.764,2.54-1.843
+		c1.129-0.079,2.203,0.492,2.771,1.471L90.191,191.032z M212.964,112.123c-0.532-0.917-0.534-2.049-0.005-2.968
+		c0.529-0.919,1.509-1.485,2.569-1.485h48.033c4.122,0,7.769,2.686,8.986,6.624c3.643,11.792,5.607,24.313,5.607,37.285
+		c0,16.765-3.282,32.777-9.229,47.433c-0.426,1.049-1.411,1.764-2.54,1.843c-1.129,0.079-2.203-0.492-2.771-1.471L212.964,112.123z
+		 M251.533,74.011c0.695,0.894,0.82,2.105,0.324,3.122c-0.497,1.017-1.53,1.663-2.662,1.663H147.607
+		c-1.056,0-2.033-0.562-2.563-1.475s-0.535-2.04-0.012-2.958l23.841-41.825c2.044-3.586,6.182-5.415,10.212-4.518
+		C208.301,34.519,233.747,51.144,251.533,74.011z M133.71,26.266c1.12-0.159,2.232,0.333,2.868,1.268
+		c0.636,0.935,0.685,2.151,0.125,3.134L86.632,118.51c-0.525,0.922-1.503,1.492-2.564,1.497c-1.061,0.004-2.043-0.559-2.576-1.476
+		L57.337,76.912c-2.071-3.569-1.573-8.063,1.226-11.096C77.886,44.875,104.175,30.457,133.71,26.266z M51.622,229.144
+		c-0.695-0.894-0.82-2.105-0.323-3.122c0.497-1.017,1.53-1.663,2.662-1.663h59.886c0.005,0,0.01,0.001,0.015,0.001
+		s0.01-0.001,0.015-0.001h41.673c1.056,0,2.033,0.562,2.563,1.475c0.531,0.913,0.535,2.04,0.012,2.958l-23.841,41.825
+		c-2.044,3.586-6.182,5.415-10.212,4.518C94.854,268.636,69.408,252.012,51.622,229.144z M169.446,276.89
+		c-1.12,0.159-2.232-0.333-2.868-1.268c-0.636-0.935-0.685-2.151-0.125-3.134l50.072-87.842c0.525-0.922,1.503-1.492,2.564-1.497
+		c1.061-0.004,2.043,0.559,2.576,1.476l24.155,41.618c2.071,3.569,1.573,8.063-1.226,11.096
+		C225.27,258.28,198.981,272.699,169.446,276.89z"></path></g></svg>
+                <span class="pvid-t">Apple iPhone 12 mini</span>
+                <p class="pvid-details">
+                    <span class="cd">
+                        <span class="aperture">f</span>/16
+                    </span>
+                    <span class="cd">1/7299</span>
+                    <span class="cd">4.2mm</span>
+                    <span class="cd">ISO32</span>
+                </p>
+            </div>
+            <div class="pvi-detail">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M144 480C64.5 480 0 415.5 0 336c0-62.8 40.2-116.2 96.2-135.9c-.1-2.7-.2-5.4-.2-8.1c0-88.4 71.6-160 160-160c59.3 0 111 32.2 138.7 80.2C409.9 102 428.3 96 448 96c53 0 96 43 96 96c0 12.2-2.3 23.8-6.4 34.6C596 238.4 640 290.1 640 352c0 70.7-57.3 128-128 128H144zm79-217c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l39-39V392c0 13.3 10.7 24 24 24s24-10.7 24-24V257.9l39 39c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-80-80c-9.4-9.4-24.6-9.4-33.9 0l-80 80z"/></svg>
+            </div>
         </div>
     </div>
 
