--- a/html/home.html
+++ b/html/home.html
@@ -6,6 +6,7 @@
     <title>Photos - phoco</title>
 
     <link rel="stylesheet" href="/home.css">
+    <script src="https://cdn.jsdelivr.net/npm/heic2any/dist/heic2any.min.js"></script>
 </head>
 <body>
     <div id="selecting-bar">
