temp disable mobile video

--- a/html/home.html
+++ b/html/home.html
@@ -200,7 +200,7 @@
         </div>
     </div>
 
-    <input type="file" id="file-input" style="display: none;" multiple accept="image/*,video/*">
+    <input type="file" id="file-input" style="display: none;" multiple accept="image/*">
 
     <script src="/upload.js"></script>
     <script src="/home.js"></script>
