--- a/html/login.html
+++ b/html/login.html
@@ -12,14 +12,17 @@
         <img src="/logo.png" alt="Phoco" height="100px" width="100px">
         <h1>Login</h1>
 
+        <p id="incorrect">Incorrect username or password</p>
         <p class="lc-label">Username</p>
-        <input type="text" id="username-input">
+        <input type="text" id="username-input" spellcheck="false">
 
         <p class="lc-label">Password</p>
-        <input type="password" id="username-input">
+        <input type="password" id="password-input">
 
         <br>
         <button id="login-btn">Login</button>
     </div>
+
+    <script src="/login.js"></script>
 </body>
 </html>
