--- a/html/home.html
+++ b/html/home.html
@@ -150,6 +150,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 512" id="pvc-dot"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M64 360a56 56 0 1 0 0 112 56 56 0 1 0 0-112zm0-160a56 56 0 1 0 0 112 56 56 0 1 0 0-112zM120 96A56 56 0 1 0 8 96a56 56 0 1 0 112 0z"/></svg>
             </div>
             <img id="pv-img" alt="Phoco Image Viewer">
+            <video id="pv-video" alt="Phoco Video Viewer"></video>
         </div>
         <div id="pv-info" style="right: -350px">
             <h1>Info</h1>
