--- a/html/home.html
+++ b/html/home.html
@@ -211,7 +211,7 @@
         </div>
     </div>
 
-    <input type="file" id="file-input" style="display: none;" multiple accept="image/*">
+    <input type="file" id="file-input" style="display: none;" multiple accept="image/*, video/*">
 
     <script src="/upload.js"></script>
     <script src="/home.js"></script>
